--- a/Introduction to S4.Rmd
+++ b/Introduction to S4.Rmd
@@ -236,12 +236,17 @@ setClass("Characters_df", contains = "data.frame",
            }
          }
 )
-# Need this because as() does not check validity by default
+```
+
+## Define special `as` function for this class
+Need this because `as()` does not check validity by default
+```{r Define special `as` function for this class}
 setAs("data.frame", "Characters_df",
       function(from) {
         new("Characters_df",from)
       })
 ```
+
 
 ## Validity checking example
 ```{r A data frame of Scifi Characters, error=TRUE, purl=FALSE}
@@ -306,7 +311,7 @@ setAs("list", "Scifi_Character_List",
 e.g. to define a generic and a class before a method
 * This is specified by `Collate` field in `DESCRIPTION`
 * Use roxygen2 to generate the `Collate` field
-    + use @include tag
+    + use @include tag to specify which files must be loaded before the current one
     + check box in RStudio project options
 
 ## Summary
@@ -318,28 +323,28 @@ e.g. to define a generic and a class before a method
 * S4 classes in packages
 * __Documenting S4 classes__
 
-## Document Scifi_character class with roxygen2
-```{r Document Scifi_character class}
+## Document Scifi_Character class with roxygen2
+```{r Document Scifi_Character class}
 #' An S4 class to represent a scifi character
 #' 
 #' @slot name character name
 ```
 Document the print method
 ```{r Document print method}
-#' Print a Scifi_character object
+#' Print a Scifi_Character object
 #' 
 #' Prints a signle sentense describing the object
 #' 
-#' @param x object of class Scifi_character
+#' @param x object of class Scifi_Character
 #'
-#' @seealso \code{\linkS4class{Scifi_character}}, \code{\link[base]{print}}
+#' @seealso \code{\linkS4class{Scifi_Character}}, \code{\link[base]{print}}
 ```
 
 ## Document multiple methods together
 * Document several methods in one help page
 * Append method documentation to generic or to class
-
-Use `@describeIn` or `@rdname` tags
+* Use `@describeIn` or `@rdname` tags
+* See more in Hadley's book: http://r-pkgs.had.co.nz/man.html#dry2
 
 ## Summary
 * Define a simple class
